footer and layout changes

--- a/app/public/css/layout.css
+++ b/app/public/css/layout.css
@@ -1,18 +1,18 @@
 body {
   background-attachment: fixed;
   background-color: rgba(255, 255, 255, 0.4);
-  background-image: url('/images/background2.jpg');
+  background-image: url('/images/background.jpg');
   background-position: top center;
   background-repeat: no-repeat;
   -webkit-background-size: cover;
      -moz-background-size: cover;
        -o-background-size: cover;
           background-size: cover;
-  padding: 0;
+  padding: 0 0 10em 0;
 }
 
 div.logo {
-  background-color: rgba(0, 0, 0, 0.7);
+  background-color: rgba(100, 100, 100, 0.7);
 }
 img.logo {
   max-width: 550px;
@@ -24,8 +24,8 @@ img.logo {
 }
 
 .footer-bg {
-  background-color: rgba(100, 100, 100, 1.0);
-  border-radius: 0 0 6px 6px;
+  background-color: rgba(100, 100, 100, 0.8);
+  border-radius: 0 0 20px 20px;
   color: rgba(255, 255, 255, 1.0);
 }
 .footer-bg a {
@@ -40,7 +40,7 @@ img.logo {
   padding: 0;
 }
 .nav-bg {
-  background-color: rgba(0, 0, 0, 0.8);
+  background-color: rgba(100, 100, 100, 0.8);
 }
 
 .navbar-default .navbar-nav > li > a {
