--- a/app/views/support.haml
+++ b/app/views/support.haml
@@ -7,11 +7,6 @@
   You can financially support our projects by donating through the EWB-USA national website.
   Funding can be contributed for
   = succeed "," do
-    %a{:href => "https://ssl.charityweb.net/ewbusa/?Custom3=100216"}
-      %strong general chapter activities
-  or designated for a specific international project
-  (
-  %a{:href => "https://ssl.charityweb.net/ewbusa/?Custom3=9151"}>
-    %strong La Victoria, Ecuador
-  ).
+    %a{:href => 'https://ssl.charityweb.net/ewbusa/?Custom3=100216'} general chapter activities
+  or designated for a specific international project.
 %p EWB-USA is a non-profit company, and your donation is therefore tax deductible.
