--- a/app/views/_footer.haml
+++ b/app/views/_footer.haml
@@ -1,37 +1,39 @@
 .row
-  .col-md-4
-    %a{:href => '/support'}
-      %h3.well.well-sm.well-hd Support Us
-    %p
-      You can financially support our projects by donating through the EWB-USA national website.
-      Funding can be contributed for
-      = succeed ',' do
-        %a{:href => 'https://ssl.charityweb.net/ewbusa/?Custom3=100216'} general chapter activities
-      or designated for a specific international project.
-  .col-md-4
-    %h3.well.well-sm.well-hd Join Us Elsewhere
-    %ul
-      %span
-        %a{:href => "https://www.facebook.com/EWBatUSC"}
-          %li.icon-facebook Like our page
-      %span
-        %a{:href => "https://twitter.com/ewbusa_usc"}
-          %li.icon-twitter Follow us on Twitter
-      %span
-        %a{:href => "http://www.youtube.com/user/uscewb"}
-          %li.icon-videocam Follow us on YouTube
-      %span
-        %a{:href => "http://www.ewb-usa.org/"}
-          %li.icon-link-1 Visit the national EWB-USA website
-  .col-md-4
-    %h3.well.well-sm.well-hd Get Involved
-    %ul
-      %span
-        %a{:href => "contact#contact-form"}
-          %li.icon-feather Contact Us
-      %span
-        %a{:href => "news#calendar"}
-          %li.icon-calendar View upcoming events
+  -#
+    .col-md-4
+      %a{:href => '/support'}
+        %h3.well.well-sm.well-hd Support Us
+      %p
+        You can financially support our projects by donating through the EWB-USA national website.
+        Funding can be contributed for
+        = succeed ',' do
+          %a{:href => 'https://ssl.charityweb.net/ewbusa/?Custom3=100216'} general chapter activities
+        or designated for a specific international project.
+    .col-md-4
+      %h3.well.well-sm.well-hd Join Us Elsewhere
+      %ul
+        %li
+          %a{:href => 'http://www.facebook.com/ewbatusc'}
+            Facebook
+        %li
+          %a{:href => 'http://www.twitter.com/ewbusa_usc'}
+            Twitter
+        %li
+          %a{:href => "http://www.youtube.com/user/uscewb"}
+            YouTube
+        %li
+          %a{:href => "http://www.ewb-usa.org/"}
+            National EWB-USA website
+    .col-md-4
+      %h3.well.well-sm.well-hd Get Involved
+      %ul
+        %li
+          %a{:href => "contact#contact-form"}
+            Contact Us
+        %li
+          %a{:href => "news#calendar"}
+            View Upcoming Events
   .col-xs-12
+    %br
     %p.text-center
       &copy; 2014 University of South Carolina EWB-USA Student Chapter.
