--- a/app/views/_footer.haml
+++ b/app/views/_footer.haml
@@ -36,4 +36,4 @@
   .col-xs-12
     %br
     %p.text-center
-      &copy; 2014 University of South Carolina EWB-USA Student Chapter.
+      %b &copy; 2014 University of South Carolina EWB-USA Student Chapter.
