--- a/app/public/css/layout.css
+++ b/app/public/css/layout.css
@@ -8,7 +8,7 @@ body {
      -moz-background-size: cover;
        -o-background-size: cover;
           background-size: cover;
-  padding: 2em 0 10em 0;
+  padding: 2em 0 8em 0;
 }
 
 div.logo {
@@ -18,6 +18,7 @@ div.logo {
 img.logo {
   max-width: 550px;
   padding: 40px 0 20px 20px;
+  width: 100%;
 }
 
 .bg-white {
@@ -59,3 +60,13 @@ img.logo {
   color: rgba(255, 255, 255, 1.0);
   text-align: center;
 }
+
+#nav.affix {
+  background-color: rgba(0, 0, 0, 0.8);
+  position: fixed;
+    top: 0;
+    left: 0;
+  width: 100%;
+  z-index: 2;
+}
+
