--- a/app/views/_navbar.haml
+++ b/app/views/_navbar.haml
@@ -1,6 +1,5 @@
-%nav.navbar.navbar-default{role: "navigation"}
+%nav#nav.navbar.navbar-default{role: "navigation"}
   .container-fluid
-    /
     .navbar-header
       %button.navbar-toggle{"data-target" => "#nav-collapse", "data-toggle" => "collapse", type: "button"}
         %span.sr-only Toggle navigation
@@ -8,6 +7,5 @@
         %span.icon-bar
         %span.icon-bar
       %a.navbar-brand{href: '/'}
-    /
     #nav-collapse.collapse.navbar-collapse
       = render_navigation
