--- a/app/views/layout.haml
+++ b/app/views/layout.haml
@@ -12,8 +12,10 @@
     .container
       .row
         .col-xs-12.logo
-          %a{:href => '/'}
-            %img.logo{:src => 'images/uscewb.png'}
+          .row
+            .col-xs-12.col-md-6.col-md-offset-3
+              %a{:href => '/'}
+                %img.logo{:src => 'images/uscewb.png'}
         .col-xs-12.nav-bg
           = haml(:_navbar)
         .col-xs-12.bg-white
@@ -23,6 +25,7 @@
     %script{:src => 'https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js'}
     %script{:src => 'js/bootstrap.js'}
     %script{:src => 'js/lightbox.js'}
+    / JS used to affix the navbar
     :javascript
       $('#nav').affix({
         offset: { top: $('#nav').offset().top }
