--- a/app/views/support.haml
+++ b/app/views/support.haml
@@ -1,23 +1,13 @@
 .page-header
   %h2.text-center Our Top Contributors
-.page-header
-  %h3 Ways to Contribute
-%h4 Donate directly to the USC chapter
-%p
-  You can financially support our projects by donating through the EWB-USA national website.
-  Funding can be contributed for
-  = succeed "," do
-    %a{:href => 'https://ssl.charityweb.net/ewbusa/?Custom3=100216'} general chapter activities
-  or designated for a specific international project.
-%p EWB-USA is a non-profit company, and your donation is therefore tax deductible.
 
 .row
   .col-xs-12.col-md-6
     %a.thumbnail{:href => "http://why.knovel.com/"}
       .row
-        .col-xs-4
+        .col-xs-12.col-md-4
           %img.img-responsive.img-circle{:src => "images/knovel.jpg"}/
-        .col-xs-8
+        .col-xs-12.col-md-8
           %h3 Knovel
           %p 
             Knovel is a web-based application integrating technical 
@@ -26,9 +16,9 @@
   .col-xs-12.col-md-6
     %a.thumbnail{:href => "http://www.boeing.com/boeing/"}
       .row
-        .col-xs-4
+        .col-xs-12.col-md-4
           %img.img-responsive.img-circle{:src => "images/boeing.jpeg"}/
-        .col-xs-8
+        .col-xs-12.col-md-8
           %h3 Boeing
           %p 
             Boeing is the world's leading aerospace company and the largest 
@@ -36,24 +26,126 @@
             combined.
 
 .row
-  .col-xs-6.col-md-3
+  .col-xs-12.col-md-3
     %a.thumbnail{:href => "http://www.same.org/index.php"}
       %img.img-responsive.img-rounded.img-thumbnail{:src => "images/same.jpg"}
       %h4.text-center 
         Society of American Military Engineers
-  .col-xs-6.col-md-3
-    %a.thumbnail{:href => "http://www.asce.org/"}
-      %img.img-rounded.img-thumbnail{:src => "images/asce.png"}
-      %h4.text-center
-        The American Society of Civil Engineers
-  .col-xs-6.col-md-3
+  .col-xs-12.col-md-3
     %a.thumbnail{:href => "http://www.cec.sc.edu/"}
       %img.img-rounded.img-thumbnail{:src => "images/usc.jpg"}
       %h4.text-center
         USC College of Engineering and Computing
-  .col-xs-6.col-md-3
+  .col-xs-12.col-md-3
+    %a.thumbnail{:href => "http://www.asce.org/"}
+      %img.img-rounded.img-thumbnail{:src => "images/asce.png"}
+      %h4.text-center
+        The American Society of Civil Engineers
+  .col-xs-12.col-md-3
     %a.thumbnail{:href => "http://www.ups.com/content/us/en/index.jsx?WT.svl=BrndMrk"}
       %img.img-rounded.img-thumbnail{:src => "images/ups.jpg", :style => 'width:100%'}
       %h4.text-center
         United Parcel Service of America
-                    
+
+/ Ways to Contribute                   
+.row
+  .col-xs-12
+    .page-header
+      %h3 Ways to Contribute
+    %h4 Donate directly to the USC chapter
+    %p
+      You can financially support our projects by donating through the EWB-USA national website.
+      Funding can be contributed for
+      = succeed "," do
+        %a{:href => 'https://ssl.charityweb.net/ewbusa/?Custom3=100216'} general chapter activities
+      or designated for a specific international project.
+    %p EWB-USA is a non-profit company, and your donation is therefore tax deductible.
+    
+%table.table.table-bordered.table-striped
+  %tr
+    %th{:colspan => "2"}
+      %h4 Sponsorship Levels
+  %tr
+    %td
+      %strong
+        %u Garnet
+      %br/
+      Donations of $8,000 or more
+    %td
+      Large plaque with picture of travel team with village
+      %br/
+      Large sponsor logo on banner
+      %br/
+      Automatic recognition on banner the following year
+      %br/
+      Recognition on EWB-USA USC Chapter Website
+      %ul
+        %li 100-word description of sponsor&rsquo;s organization
+        %li Link to sponsor&rsquo;s official website
+        %li Sponsor&rsquo;s logo
+      Coffee from village
+  %tr
+    %td
+      %strong
+        %u Black
+      %br/
+      Donations of $5,000 to $7,999
+    %td
+      Medium plaque with picture of travel team with village
+      %br/
+      Medium sponsor logo on banner
+      %br/
+      Recognition on EWB-USA USC Chapter Website
+      %ul
+        %li Link to sponsor&rsquo;s official website
+        %li Sponsor&rsquo;s logo
+      Coffee from village
+  %tr
+    %td
+      %strong
+        %u White
+      %br/
+      Donations of $1,500 to $4,999
+    %td
+      Small plaque with picture of travel team with village
+      %br/
+      Small sponsor logo on banner
+      %br/
+      Recognition on EWB-USA USC Chapter Website
+      %ul
+        %li Sponsor&rsquo;s logo
+      Coffee from village
+  %tr
+    %td
+      %strong
+        %u Gold
+      %br/
+      Donations of $500 to $1,499
+    %td
+      Sponsor&rsquo;s name on banner
+      %br/
+      Recognition on EWB-USA USC Chapter Website
+      %br/
+      Coffee from village
+  %tr
+    %td
+      %strong
+        %u Silver
+      %br/
+      Donations of $200 to $499
+    %td
+      Recognition on EWB-USA USC Chapter Website
+      %br/
+      Coffee from village
+      
+%h3 Our Partners and Sponsors
+%p EWB-USA at USC thanks our sponsors for their support of the La Victoria Irrigation project.
+%ul.sponsors
+  %li Drs. Kenneth and Martha Reifsnider
+  %li Society of American Military Engineers
+  %li American Society of Civil Engineers (ASCE)
+  %li Level Growth, LLC
+%p EWB-USA at USC thanks these local Columbia, SC businesses for their support of the La Victoria Irrigation project through Percent Nights.
+%ul.sponsors
+  %li Orange Leaf
+  %li Yoghut
