ready for production

--- a/app/views/index.haml
+++ b/app/views/index.haml
@@ -79,18 +79,20 @@
       chapters engaged in over 400 active programs in 45 countries 
       around the world.
 .row
+  .col-xs-12
+    %br
   .col-xs-12.col-md-4
-    .img-thumbnail
+    %a.thumbnail{"data-lightbox" => 'index', 
+       :href => 'images/index1.jpg'}
       %img.img-responsive{:src => 'images/index1.jpg'}
-      %h4.text-center International Projects
   .col-xs-12.col-md-4
-    .img-thumbnail
-      %img.img-responsive{:src => 'images/index2.jpg'}
-      %h4.text-center Local Activities
-  .col-xs-12.col-md-4
-    .img-thumbnail
+    %a.thumbnail{"data-lightbox" => 'index',
+       :href => 'images/index3.jpg'}
       %img.img-responsive{:src => 'images/index3.jpg'}
-      %h4.text-center Support Us
+  .col-xs-12.col-md-4
+    %a.thumbnail{"data-lightbox" => 'index',
+       :href => 'images/index2.jpg'}
+      %img.img-responsive{:src => 'images/index2.jpg'}
 .row
   .col-xs-12
     %br
