--- a/app/views/support.haml
+++ b/app/views/support.haml
@@ -7,7 +7,7 @@
     %a.thumbnail{:href => 'http://www.sc.edu/'}
       .row
         .col-xs-12.col-md-4
-          %img{:src => 'images/usc.png',
+          %img.center-block{:src => 'images/usc.png',
                :height => '200px'}/
         .col-xs-12.col-md-8
           %h3 University of South Carolina
