--- a/app/views/events.haml
+++ b/app/views/events.haml
@@ -13,6 +13,14 @@
       %h3 Recent News
     %blockquote
       %p>
+        %a{:href => 'http://www.studyabroad.sc.edu/index.php?option=com_content&view=article&id=501:engineering-students-bring-economic-stability-to-ecuadorean-coffee-farmers-gain-real-world-experience&catid=86:latest-news&Itemid=1118'} Engineering Students Bring Economic Stability to Ecuadorean Coffee Farmers, Gain Real World Experience
+      %small December 12, 2014 via Study Abroad at University of South Carolina
+    %blockquote
+      %p>
+        %a{:href => 'http://uscdrinksrain.blogspot.com/'} Drink More Rain
+      %small December 4, 2014 via Sustainable Carolina
+    %blockquote
+      %p>
         %a{:href => "http://www.marketwire.com/press-release/engineers-without-borders-usa-university-of-south-carolina-chapter-wins-knovel-grant-1792664.htm"} EWB USA University of South Carolina Chapter Wins Knovel Grant
       %small May 20, 2013 via Market Wired
     %blockquote
