--- a/app/public/css/layout.css
+++ b/app/public/css/layout.css
@@ -1,3 +1,7 @@
+a.thumbnail {
+  color: black;
+}
+
 body {
   background-attachment: fixed;
   background-color: rgba(255, 255, 255, 0.4);
@@ -62,7 +66,7 @@ img.logo {
 }
 
 #nav.affix {
-  background-color: rgba(0, 0, 0, 0.8);
+  background-color: rgba(0, 0, 0, 1);
   position: fixed;
     top: 0;
     left: 0;
