--- a/app/views/index.haml
+++ b/app/views/index.haml
@@ -1,11 +1,11 @@
 .page-header.text-center
   %h2 
-    EWB USA at the University of South Carolina
+    EWB-USA at the University of South Carolina
   .row
     .col-xs-12.col-md-10.col-md-push-1
       %p
         %em 
-          EWB USA supports community-driven development programs worldwide 
+          EWB-USA supports community-driven development programs worldwide 
           by collaborating with local partners to design and implement 
           sustainable engineering projects, while creating transformative 
           experiences and responsible leaders.
@@ -13,7 +13,8 @@
   .col-xs-12.col-md-6
     %h3 Who We Are
     %p 
-      EWB-USA is at the forefront of a movement within the engineering 
+      Engineers Without Borders USA (EWB-USA) 
+      is at the forefront of a movement within the engineering 
       community. By offering unique, hands-on opportunities for 
       engineers and other professions to work directly with communities 
       in need, EWB-USA is educating the next generation of engineers in 
@@ -35,7 +36,7 @@
       to learn more about chapter activities and projects.
     %h3 What is Engineers Without Borders USA?
     %p
-      Engineers Without Borders USA (EWB-USA) is a non-profit 
+      EWB-USA is a non-profit 
       humanitarian organization dedicated to partnering with developing 
       communities around the world. We provide engineering services 
       through our volunteer chapter members to implement the 
