--- a/app/views/projects.haml
+++ b/app/views/projects.haml
@@ -1,7 +1,7 @@
 .row
   .col-xs-12
     .page-header
-      %h3 EWB-USA's International Efforts
+      %h3 EWB-USC's International Efforts
   .col-md-6
     %h4 Needs of the Community
     %p
@@ -41,7 +41,7 @@
 .row
   .col-xs-12
     .page-header
-      %h3 What does EWB-USA do locally?
+      %h3 What does EWB-USC do locally?
   .col-md-6
     %p
       The primary focus of the EWB at USC chapter is on our international project. However, we also volunteer in our local community in a variety of ways!
