loads of changes

--- a/app/views/_footer.haml
+++ b/app/views/_footer.haml
@@ -35,5 +35,5 @@
             View Upcoming Events
   .col-xs-12
     %p.text-center
-      %b &copy; 2014 University of South Carolina EWB-USA Student Chapter.
+      %b &copy; 2014 University of South Carolina EWB-USA Student Chapter
       
