--- a/app/views/index.haml
+++ b/app/views/index.haml
@@ -10,75 +10,64 @@
           sustainable engineering projects, while creating transformative 
           experiences and responsible leaders.
 .row
-  .col-xs-12.col-md-6
+  .col-xs-12.col-md-5.col-md-offset-1
     %h3 Who We Are
     %p 
-      Engineers Without Borders USA (EWB-USA) 
-      is at the forefront of a movement within the engineering 
-      community. By offering unique, hands-on opportunities for 
-      engineers and other professions to work directly with communities 
-      in need, EWB-USA is educating the next generation of engineers in 
-      sustainable engineering practice by providing real world 
-      experience and problem solving.
-    %p
-      The Student Chapter of
-      = succeed "," do
-        %b EWB-USA at USC
-      founded in 2010, is a strong interdisciplinary team from a variety 
-      of colleges and majors. Our student members come from the College 
-      of Engineering and Computing, the College of Arts and Sciences, 
-      the Arnold School of Public Health, and the Darla Moore School of 
-      Business. We work on projects to benefit both local and 
-      international communities.
-      %a{:href => '/projects'}
-        %strong
-          Click here
-      to learn more about chapter activities and projects.
-    %h3 What is Engineers Without Borders USA?
-    %p
-      EWB-USA is a non-profit 
-      humanitarian organization dedicated to partnering with developing 
-      communities around the world. We provide engineering services 
-      through our volunteer chapter members to implement the 
-      infrastructure necessary to meet basic human needs. Through our 
-      sustainable engineering projects, we strive to improve the quality 
-      of life in the communities we serve. Thousands of members in more 
-      than 225 university and professional chapters work to support 
-      these efforts.
-    %p
-      EWB-USA supports community-driven development programs worldwide 
-      by collaborating with local partners to design and implement 
-      sustainable engineering projects, while creating transformative 
-      experiences and responsible leaders.
+      Engineers Without Borders USA (EWB-USA) is at the forefront of a movement within the engineering community. By offering unique, hands-on opportunities for engineers and other professions to work directly with communities in need, EWB-USA is educating the next generation of engineers in sustainable engineering practices by providing real world experience and problem solving. EWB-USA is a 501(c)3 non-profit humanitarian organization dedicated to partnering with lower-income communities around the world. Over 14,700 members work to support these efforts with projects in water supply, sanitation, energy, agriculture, civil works, structures and information systems.
     %p
       Learn more about EWB-USA at the national website,
       = succeed "." do
-        %a{:href => "http://www.ewb-usa.org"} ewb-usa.org
-  .col-xs-12.col-md-6
+        %a{:href => 'ewb-usa.org'} ewb-usa.org
+    %p
+      The Student Chapter of EWB-USA at the University of South Carolina (EWB-USC), founded in 2010, is a strong interdisciplinary team from a variety of colleges and majors. Our student members come from the College of Engineering and Computing, the College of Arts and Sciences, the Arnold School of Public Health, and the Darla Moore School of Business. We work on projects to benefit both local and international communities. 
+      %a{:href => '/projects'} Click here 
+      to learn more about chapter activities and projects.
+    %h3 What We Do
+    %p
+      EWB-USC is working on projects locally and internationally. Our international project is in La Victoria, Ecuador with a coffee producing community of about 1,500 people. The dry season in La Victoria prevents the farmers from producing as much coffee as they could otherwise, which impedes their economic development. To combat this issue, our chapter has designed and built a pipeline from a waterfall one mile away from the farms that runs year-round. Currently, we are in the monitoring phase of the project to work on sustainability and full project turnover to the community.
+    %p 
+      Locally, we recently partnered with Sustainable Carolina at the University of South Carolina to design and build a water fountain that uses filtered water from the rainwater runoff from a dormitory roof. We also lead Lego Robotics teams at a couple local elementary schools annually to inspire children to continue their interests in engineering. In the past, we have built an irrigation system for the Honors Residence Hall Gardens at the University of South Carolina using rain barrels that collect rain from the roof of the dorm.
+    %h3 Chapter Information
+    %p 
+      Our chapter has general meetings once a week.  The Engineering Committee meets before our general meeting, and all other committees meet after the general meeting to work on delegating tasks for the coming week. Check out the weekly meeting times and locations under the Events tab. Chapter dues are $10 per semester to cover the cost of chapter dues to EWB-USA. The EWB-USC chapter covers all travel costs to the project sites by grants and donations. Due to this, travel spots are limited to about eight people who are all able to substantially contribute to the project while on-site.
+      
+  .col-xs-12.col-md-5
+    / youtube embed
     %iframe{:allowfullscreen => '',
             :class => 'thumbnail',
             :frameborder => '0',
             :src => '//www.youtube.com/embed/FdIIXuSezjg',
             :height => '300',
             :width => '100%'}
-    %h3 EWB-USA History
-    %p 
-      EWB-USA was founded in 2002 by University of Colorado-Boulder 
-      Civil Engineering professor, Dr. Bernard Amadei in order to 
-      address some of the most prevalent challenges facing the 
-      developing world, including water purification and delivery, 
-      sanitation, transportation and infrastructure projects, and 
-      sustainable and renewable energy systems. What started as a 
-      backyard conversation with a landscaper from San Pablo, Belize 
-      resulted in a clean water system for the local community and 
-      sparked a global engineering movement that has directly impacted 
-      more than one million people to date.
+          
+  .col-xs-12.col-md-5
+    %h3 Committee Descriptions
     %p
-      The nonprofit started with 18 members and one university chapter. 
-      Today, EWB-USA is comprised of an expansive network of over 12,000 
-      members and more than 225 university student and professional 
-      chapters engaged in over 400 active programs in 45 countries 
-      around the world.
+      EWB-USC is broken up into several committees. Members may be involved in as many committees as they are interested in. Most committees are able to communicate tasks through email, so if multiple committees meet at the same time it is still possible to be involved with more.
+       
+    %b Engineering Committee
+    %p
+      The majority of members belong to this committee. It is responsible for choosing international projects, designing engineering projects and filling out the required technical paperwork for EWB-USA approval.
+       
+    %b Local Projects Committee
+    %p
+      Our chapter has many local projects in both engineering and other events. This is a great way to get involved with designing engineering projects on a smaller and quicker scale than the international project.
+
+    %b Finance Committee
+    %p
+      This committee researches and writes grants for the chapter to cover all travel costs incurred by trips to the project site and building materials. Annually, we apply to and earn over $20,000 worth of grants.
+       
+    %b Corporate Outreach Committee
+    %p
+      This committee is great for students who want to network with engineering corporations. We make presentations to corporations during their annual or monthly meetings to introduce our project to them for monetary and technical support.
+
+    %b Public Health Committee
+    %p
+      To ensure project sustainability, the public health committee uses needs assessment to make sure all our projects originate from the community. They also investigate public health concerns in the project area to find possible future projects.
+
+    %b Spanish Committee
+    %p
+      We need to communicate regularly with our project partners in La Victoria via email and phone calls. It is imperative that we have both translators and interpreters who can bridge information in a culturally appropriate way. We also require interpreters during trips to the project location. 
 .row
   .col-xs-12
     %br
