--- a/app/views/projects.haml
+++ b/app/views/projects.haml
@@ -1,58 +1,105 @@
+/ International
 .row
-  .col-xs-12
+  .col-xs-12.col-md-10.col-md-offset-1
     .page-header
       %h3 EWB-USC's International Efforts
-  .col-md-6
-    %h4 Needs of the Community
+  .col-md-10.col-md-offset-1
+    %b Community Needs
     %p
-      Las Lajas is a mid-size county located in the southern part of 
-      Ecuador in the province of El Oro. There are several communities 
-      that make up this county. Approximately 5,000 people live in Las 
-      Lajas (2,500 in La Victoria). Most are farmers, and they mainly 
-      produce coffee. The climate is hot and dry, and rainfall can be 
-      unreliable and insufficient.
-    %p 
-      The Association of Organic Coffee Producers of Las Lajas (ACOLL) 
-      and farmers would like to establish a water collection, storage, 
-      and distribution system to stabilize their water supply and 
-      optimize cultivation in every season. In this project, the USC 
-      chapter of EWB-USA will design and oversee construction of an 
-      system to improve irrigation and water quality for the community.
-    %p 
-      The community will provide machinery and labor for the 
-      construction process. Their main concern is about the long-term 
-      stability of the system, so establishing a sense of ownership and 
-      ensuring good education about maintenance and repair are key 
-      aspects of the project. The chapter is committed to the Las Lajas 
-      project for a minimum of five years (beginning in 2012).
-  .col-md-6
-    %h4 Pre-Assessment Trip (Winter 2012)
-    %p 
-      This trip was our first introduction to La Victoria community, 
-      giving us a chance to build a relationship with them and also 
-      survey the local terrain. Based on this preliminary knowledge, we 
-      were able to proceed with designing an appropriate project.
-    %h4 Project Proposal Trip (May 2013)
-    %h4 Project Implementation Trip (Winter 2013)
+      Las Lajas is a county located in the southeastern part of Ecuador in the province of El Oro. Approximately 5,000 people live in Las Lajas with about 1,500 in La Victoria. Most are farmers, and they mainly produce coffee. The climate is hot and dry, and rainfall can be unreliable and insufficient.
     %p
-      If you would like to support our chapter,
-      %a{:href => '/support'}
-        %b there are a variety of ways you can help!
+      The Association of Organic Coffee Producers of Las Lajas (ACOLL) wanted to establish a water collection, storage, and distribution system to stabilize their water supply and optimize cultivation in every season. In this project, EWB-USC designed and oversaw construction of a system to improve irrigation for the community.
+    .row
+      .col-xs-6
+        %a.thumbnail{"data-lightbox" => 'garden', 
+          "data-title" => 'Coffee nursery at the technical high school in La Victoria', 
+         :href => 'https://farm4.staticflickr.com/3943/15297523170_f29b25bf02_o.jpg'}
+          %img{:src => 'https://farm4.staticflickr.com/3943/15297523170_f29b25bf02_o.jpg'}
+      .col-xs-6
+        %a.thumbnail{"data-lightbox" => 'garden', 
+          "data-title" => 'Nursery at reforestation site', 
+         :href => 'https://farm6.staticflickr.com/5613/15297522950_4032dd811f_o.jpg'}
+          %img{:src => 'https://farm6.staticflickr.com/5613/15297522950_4032dd811f_o.jpg'}
+    %p
+      The pipeline has three farms it feeds water to: the technical high school, the reforestation site controlled by the municipality, and the land ACOLL farms on. The high school has an agriculture program in which students take care of a coffee nursery that community members and ACOLL use to purchase their coffee plants. There are storage ponds designed and built by the community members at the high school and the reforestation site.
+    %p
+      The community provided machinery and labor for the construction process. Their main concern is about the long-term stability of the system, so establishing a sense of ownership and ensuring good education about maintenance and repair are key aspects of the project. The chapter is committed to the Las Lajas project for a minimum of five years (beginning in 2012).
+    .row
+      .col-xs-12.col-md-6
+        .row
+          .col-xs-4.col-md-12
+            %a.thumbnail{"data-lightbox" => 'garden', 
+              "data-title" => 'Signing the Memorandum of Understanding with the Mayor of La Victoria', 
+             :href => 'https://farm6.staticflickr.com/5599/15297671897_18646c171c_o.jpg'}
+              %img{:src => 'https://farm6.staticflickr.com/5599/15297671897_18646c171c_o.jpg'}
+          .col-xs-8.col-md-12
+            %b First Assessment Trip (January 2013)
+            %p
+              This trip was our first introduction to La Victoria community, giving us a chance to build a relationship with them and also survey the local terrain with GPS to establish the best pipeline pathway. Based on this preliminary knowledge, we were able to begin designing an appropriate project.
+      .col-xs-12.col-md-6
+        .row
+          .col-xs-4.col-md-12
+            %a.thumbnail{"data-lightbox" => 'garden', 
+              "data-title" => 'Taking GPS coordinates at the pipeline waterfall source', 
+             :href => 'https://farm9.staticflickr.com/8661/15460134014_c98cbd610d_o.jpg'}
+              %img{:src => 'https://farm9.staticflickr.com/8661/15460134014_c98cbd610d_o.jpg'}
+          .col-xs-8.col-md-12
+            %b Second Assessment Trip (May 2013)
+            %p
+              After this trip, we better established communication and trust between our organization and the community. The design options were presented to the community stakeholders for their approval and input. The final pipeline path was traced so the community could begin digging trenches to lay the pipeline in. After this trip, the pipeline design was finalized and material suppliers were sought for project implementation.
+    .row
+      .col-xs-12.col-md-6
+        .row
+          .col-xs-4.col-md-12
+            %a.thumbnail{"data-lightbox" => 'garden', 
+              "data-title" => 'Laying the pipeline', 
+             :href => 'https://farm4.staticflickr.com/3929/15296880218_af005fa004_o.jpg'}
+              %img{:src => 'https://farm4.staticflickr.com/3929/15296880218_af005fa004_o.jpg'}
+          .col-xs-8.col-md-12
+            %b Implementation Trip (May 2014)
+            %p
+              The pipeline was constructed during this trip with the help of community stakeholders and the local high schoolers. The entrance siphon, cleanout structures and exit structures were built, and only some sections of pipeline to connect the structures was left unfinished. The La Victoria community members had constructed similar buried pipeline structures for their water distribution system so they finished the pipeline after this time.
+      .col-xs-12.col-md-6
+        .row
+          .col-xs-4.col-md-12
+            %a.thumbnail{"data-lightbox" => 'garden', 
+              "data-title" => 'Taking GPS coordinates at the pipeline waterfall source', 
+             :href => 'https://farm8.staticflickr.com/7529/16081818312_914f34d667_o.jpg'}
+              %img{:src => 'https://farm8.staticflickr.com/7529/16081818312_914f34d667_o.jpg'}
+          .col-xs-8.col-md-12
+            %b Monitoring Trip (January 2015)
+            %p
+              During this trip, the team will establish a pipeline monitoring board to check the water flow and regularly maintain the pipeline when necessary, such as opening the cleanout structures to get rid of gravel and leaves that may be blocking the pipe. After this trip, the community should be completely in control of the pipeline. The team will also speak with stakeholders to see if there are any other community needs that could be turned into new EWB-USC project partnerships.
+              
+/ Locally
 .row
-  .col-xs-12
+  .col-xs-12.col-md-10.col-md-offset-1
     .page-header
       %h3 What does EWB-USC do locally?
-  .col-md-6
-    %p
-      The primary focus of the EWB at USC chapter is on our international project. However, we also volunteer in our local community in a variety of ways!
-    %h4 Mentoring LEGO FIRST teams
-    %p
-      We are partnering with three local schools in the Irmo, SC area (northwest of Columbia). Engineering students
-      from USC volunteer once a week to work with fifth-grade LEGO FIRST teams, helping them with design, programming,
-      and presentation for the regional competition in December.
-    %h4 Design and Installation of Rain Barrel System for Honors Dorm Garden
-  .col-md-6
+  .col-xs-4.col-md-2.col-md-offset-1
     %a.thumbnail{"data-lightbox" => 'garden', 
-       "data-title" => 'USC Honors Dorm garden grows herbs & vegetables to use in the dormitory kitchen', 
-       :href => 'images/garden.jpg'}
-      %img{:src => 'images/garden.jpg'}
+      "data-title" => 'EWB-USC member Elizabeth Crummy helps mentor Oak Pointe Elementary’s LEGO FIRST Robotics Team', 
+     :href => 'https://farm8.staticflickr.com/7464/15895321118_23a36bd135_o.jpg'}
+      %img{:src => 'https://farm8.staticflickr.com/7464/15895321118_23a36bd135_o.jpg'}
+      
+    %a.thumbnail{"data-lightbox" => 'garden', 
+      "data-title" => 'Rain barrel water collection system at the USC Honors Residence Hall', 
+     :href => 'https://farm8.staticflickr.com/7554/15896870569_cef361fee7_o.png'}
+      %img{:src => 'https://farm8.staticflickr.com/7554/15896870569_cef361fee7_o.png'}
+      
+  .col-xs-8.col-md-8
+    %b EWB-USC’s Local Projects
+    %p
+      The primary focus of the EWB at USC chapter is on our international project. However, we also volunteer in our local community in a variety of ways.
+    %b Mentoring LEGO FIRST Teams
+    %p
+      We partner with two elementary schools in the Irmo, SC area (northwest of Columbia). Engineering students from USC volunteer once a week to work with fifth-grade LEGO FIRST teams, helping them with design, programming, and presentation for the regional competition in December.
+    %b Rain Barrel Irrigation System for Honors Residence Hall Garden
+    %p
+      A garden was built at the Honors Residence Hall at the University of South Carolina’s campus for students to grow their own fruit, vegetables and herbs. EWB-USC designed and built a rain barrel collection system that uses rainwater from the roof of the Honors Residence Hall to store water during dry months and irrigate plants in a sustainable way.
+    %b Rain Water Drinking Fountain
+    %p
+      EWB-USC partnered with Sustainable Carolina at the University of South Carolina to design and build a water filter that uses water runoff from the roof of West Quad, a dorm on campus, to supply a sustainable drinking fountain. After filtration, this water fountain is expected to have better water quality than other drinking fountains on campus. This water fountain is already completely functional and ready for use after just one semester thanks in part to EWB-USC’s local projects team.
+    %p
+      Do you have a local project idea for EWB-USC? Feel free to send us a message with your idea.
+      
