--- a/app/views/_navbar.haml
+++ b/app/views/_navbar.haml
@@ -10,28 +10,28 @@
       / Social for Mobile
       .visible-xs
         .pull-right
-          %a{:href => 'https://www.facebook.com/ewbatusc'}
+          %a{:href => 'https://www.facebook.com/ewbatusc', :target => '_blank'}
             %img{:src => 'images/icon-facebook-hover.png', :width => '48px'}
-          %a{:href => 'https://twitter.com/ewbusa_usc'}
+          %a{:href => 'https://twitter.com/ewbusa_usc', :target => '_blank'}
             %img{:src => 'images/icon-twitter-hover.png', :width => '48px'}
-          %a{:href => 'https://www.youtube.com/user/uscewb'}
+          %a{:href => 'https://www.youtube.com/user/uscewb', :target => '_blank'}
             %img{:src => 'images/icon-youtube-hover.png', :width => '48px'}
-          %a{:href => 'https://www.linkedin.com/groups/Engineers-Without-Borders-University-South-8228144'}
+          %a{:href => 'https://www.linkedin.com/groups/Engineers-Without-Borders-University-South-8228144', :target => '_blank'}
             %img{:src => 'images/icon-linkedin-hover.png', :width => '48px'}
     #nav-collapse.collapse.navbar-collapse
       = render_navigation
       / Social for larger screens
       %ul.nav.navbar-nav.navbar-right.hidden-xs
         %li.icon-facebook
-          %a{:href => 'https://www.facebook.com/ewbatusc'}
+          %a{:href => 'https://www.facebook.com/ewbatusc', :target => '_blank'}
             %img{:src => 'images/icon-facebook.png', :width => '20px'}
         %li.icon-twitter
-          %a{:href => 'https://twitter.com/ewbusa_usc'}
+          %a{:href => 'https://twitter.com/ewbusa_usc', :target => '_blank'}
             %img{:src => 'images/icon-twitter.png', :width => '20px'}
         %li.icon-youtube
-          %a{:href => 'https://www.youtube.com/user/uscewb'}
+          %a{:href => 'https://www.youtube.com/user/uscewb', :target => '_blank'}
             %img{:src => 'images/icon-youtube.png', :width => '20px'}
         %li.icon-linkedin
-          %a{:href => 'https://www.linkedin.com/groups/Engineers-Without-Borders-University-South-8228144'}
+          %a{:href => 'https://www.linkedin.com/groups/Engineers-Without-Borders-University-South-8228144', :target => '_blank'}
             %img{:src => 'images/icon-linkedin.png', :width => '20px'}
             
