--- a/app/views/support.haml
+++ b/app/views/support.haml
@@ -1,3 +1,19 @@
+/ Ways to Contribute                   
+.row
+  .col-xs-12.col-md-10.col-md-offset-1
+    .page-header.text-center
+      %h3 Ways to Contribute
+      
+  .col-xs-12.col-md-10.col-md-offset-1
+    %h4 Donate directly to the USC chapter
+    %p
+      You can financially support our projects by donating through the EWB-USA national website.
+      Funding can be contributed for
+      = succeed "," do
+        %a{:href => 'https://ssl.charityweb.net/ewbusa/?Custom3=100216'} general chapter activities
+      or designated for a specific international project.
+    %p EWB-USA is a non-profit company, and your donation is therefore tax deductible.
+    
 .page-header
   %h2.text-center Our Top Contributors
 
@@ -61,66 +77,9 @@
       %img.img-rounded.img-thumbnail{:src => 'images/same.jpg'}
       %h4.text-center 
         Society of American Military Engineers
-
-/ Ways to Contribute                   
+        
 .row
-  .col-xs-12
-    .page-header.text-center
-      %h3 Ways to Contribute
-  .col-xs-12.col-md-6    
-    %table.table.table-bordered.table-striped
-      %tr
-        %th{:colspan => '2'}
-          %h4 Sponsorship Levels
-      %tr
-        %td
-          %strong Garnet
-          %br/
-          Donations of $5,000 or more
-        %td
-          %ul
-            %li Recognition on EWB-USC Website
-            %ul
-              %li Link to sponsor&rsquo;s official website
-              %li Sponsor&rsquo;s logo
-            %li Coffee from village
-      %tr
-        %td
-          %strong Black
-          %br/
-          Donations of $1,500 to $4,999
-        %td
-          %ul
-            %li Recognition on EWB-USC Website
-            %ul
-              %li Sponsor&rsquo;s logo
-            %li Coffee from village
-      %tr
-        %td
-          %strong Gold
-          %br/
-          Donations of $500 to $1,499
-        %td
-          %ul
-            %li Recognition on EWB-USC Website
-            %li Coffee from village
-      %tr
-        %td
-          %strong Silver
-          %br/
-          Donations of $200 to $499
-        %td
-          %ul
-            %li Recognition on EWB-USC Website
-  .col-xs-12.col-md-6
-    %h4 Donate directly to the USC chapter
-    %p
-      You can financially support our projects by donating through the EWB-USA national website.
-      Funding can be contributed for
-      = succeed "," do
-        %a{:href => 'https://ssl.charityweb.net/ewbusa/?Custom3=100216'} general chapter activities
-      or designated for a specific international project.
-    %p EWB-USA is a non-profit company, and your donation is therefore tax deductible.
+  .col-xs-12.col-md-10.col-md-offset-1
     %h3 Our Partners and Sponsors
     %p EWB-USA at USC thanks our sponsors for their support of the La Victoria Irrigation project.
     %ul.sponsors
@@ -128,4 +87,4 @@
       %li Level Growth, LLC
       %li Orange Leaf
       %li Yoghut
-      
+
