project pages changes

--- a/app/views/projects.haml
+++ b/app/views/projects.haml
@@ -75,31 +75,39 @@
 .row
   .col-xs-12.col-md-10.col-md-offset-1
     .page-header
-      %h3 What does EWB-USC do locally?
-  .col-xs-4.col-md-2.col-md-offset-1
-    %a.thumbnail{"data-lightbox" => 'garden', 
-      "data-title" => 'EWB-USC member Elizabeth Crummy helps mentor Oak Pointe Elementary’s LEGO FIRST Robotics Team', 
-     :href => 'https://farm8.staticflickr.com/7464/15895321118_23a36bd135_o.jpg'}
-      %img{:src => 'https://farm8.staticflickr.com/7464/15895321118_23a36bd135_o.jpg'}
-      
-    %a.thumbnail{"data-lightbox" => 'garden', 
-      "data-title" => 'Rain barrel water collection system at the USC Honors Residence Hall', 
-     :href => 'https://farm8.staticflickr.com/7554/15896870569_cef361fee7_o.png'}
-      %img{:src => 'https://farm8.staticflickr.com/7554/15896870569_cef361fee7_o.png'}
-      
-  .col-xs-8.col-md-8
-    %b EWB-USC’s Local Projects
-    %p
-      The primary focus of the EWB at USC chapter is on our international project. However, we also volunteer in our local community in a variety of ways.
-    %b Mentoring LEGO FIRST Teams
-    %p
-      We partner with two elementary schools in the Irmo, SC area (northwest of Columbia). Engineering students from USC volunteer once a week to work with fifth-grade LEGO FIRST teams, helping them with design, programming, and presentation for the regional competition in December.
-    %b Rain Barrel Irrigation System for Honors Residence Hall Garden
-    %p
-      A garden was built at the Honors Residence Hall at the University of South Carolina’s campus for students to grow their own fruit, vegetables and herbs. EWB-USC designed and built a rain barrel collection system that uses rainwater from the roof of the Honors Residence Hall to store water during dry months and irrigate plants in a sustainable way.
-    %b Rain Water Drinking Fountain
-    %p
-      EWB-USC partnered with Sustainable Carolina at the University of South Carolina to design and build a water filter that uses water runoff from the roof of West Quad, a dorm on campus, to supply a sustainable drinking fountain. After filtration, this water fountain is expected to have better water quality than other drinking fountains on campus. This water fountain is already completely functional and ready for use after just one semester thanks in part to EWB-USC’s local projects team.
+      %h3 EWB-USC’s Local Projects
+      %p
+        The primary focus of the EWB at USC chapter is on our international project. However, we also volunteer in our local community in a variety of ways.
+    
+  .col-xs-12.col-md-10.col-md-offset-1
+    .row  
+      .col-xs-4.col-md-4
+        %a.thumbnail{"data-lightbox" => 'garden', 
+          "data-title" => 'EWB-USC member Elizabeth Crummy helps mentor Oak Pointe Elementary’s LEGO FIRST Robotics Team', 
+         :href => 'https://farm8.staticflickr.com/7464/15895321118_23a36bd135_o.jpg'}
+          %img{:src => 'https://farm8.staticflickr.com/7464/15895321118_23a36bd135_o.jpg'}
+        %b Mentoring LEGO FIRST Teams
+        %p
+          We partner with two elementary schools in the Irmo, SC area (northwest of Columbia). Engineering students from USC volunteer once a week to work with fifth-grade LEGO FIRST teams, helping them with design, programming, and presentation for the regional competition in December.
+          
+      .col-xs-4.col-md-4   
+        %a.thumbnail{"data-lightbox" => 'garden', 
+          "data-title" => 'Rain barrel water collection system at the USC Honors Residence Hall', 
+         :href => 'https://farm8.staticflickr.com/7554/15896870569_cef361fee7_o.png'}
+          %img{:src => 'https://farm8.staticflickr.com/7554/15896870569_cef361fee7_o.png'}
+        %b Rain Barrel Irrigation System for Honors Residence Hall Garden
+        %p
+          A garden was built at the Honors Residence Hall at the University of South Carolina’s campus for students to grow their own fruit, vegetables and herbs. EWB-USC designed and built a rain barrel collection system that uses rainwater from the roof of the Honors Residence Hall to store water during dry months and irrigate plants in a sustainable way.
+          
+      .col-xs-4.col-md-4   
+        %a.thumbnail{"data-lightbox" => 'garden', 
+          "data-title" => 'Rain barrel water collection system at the USC Honors Residence Hall', 
+         :href => 'https://farm8.staticflickr.com/7466/15460775994_5c654b95ab_o.png'}
+          %img{:src => 'https://farm8.staticflickr.com/7466/15460775994_5c654b95ab_o.png'}
+        %b Rain Water Drinking Fountain
+        %p
+          EWB-USC partnered with Sustainable Carolina at the University of South Carolina to design and build a water filter that uses water runoff from the roof of West Quad, a dorm on campus, to supply a sustainable drinking fountain. After filtration, this water fountain is expected to have better water quality than other drinking fountains on campus. This water fountain is already completely functional and ready for use after just one semester thanks in part to EWB-USC’s local projects team.
+  .col-xs-12.col-md-10.col-md-offset-1
     %p
       Do you have a local project idea for EWB-USC? Feel free to send us a message with your idea.
       
