--- a/app/views/events.haml
+++ b/app/views/events.haml
@@ -1,5 +1,5 @@
 .row
-  .col-md-4
+  .col-xs-12.col-md-4
     .page-header
       %h3.text-center Upcoming Events
     %iframe{:frameborder => '0', 
@@ -8,7 +8,7 @@
             :src => 'https://www.google.com/calendar/embed?showNav=0&showPrint=0&showCalendars=0&showTz=0&mode=AGENDA&height=600&wkst=2&bgcolor=%23cccccc&src=soewob%40mailbox.sc.edu&color=%232952A3&ctz=America%2FNew_York',
             :style => 'border:solid 1px #777;border-radius:5px;padding:5px;background-color:rgb(204,204,204);',  
             :width => '100%'}
-  .col-md-8
+  .col-xs-12.col-md-8
     .page-header
       %h3 Recent News
     %blockquote
