--- a/app/public/css/layout.css
+++ b/app/public/css/layout.css
@@ -51,12 +51,19 @@ img.logo {
 
 .navbar-default .navbar-nav > li > a {
   background-color: rgba(255, 255, 255, 0.1);
-  color: #ddd;
+  color: #fff;
 }
 .navbar-default .navbar-nav > li > a:hover,
 .navbar-default .navbar-nav > li > a:focus {
   color: #fff;
   background-color: transparent;
+}
+
+.navbar-default .navbar-nav > .active > a,
+.navbar-default .navbar-nav > .active > a:hover,
+.navbar-default .navbar-nav > .active > a:focus {
+  background-color: #fff;
+  color: #000;
 }
 
 .well-hd {
