--- a/app/views/contact.haml
+++ b/app/views/contact.haml
@@ -1,56 +1,12 @@
+%br
 .row
-  .col-xs-12.col-md-4
-    %h3
-      Please contact us at:
-      %a{:href => 'soewob@mailbox.sc.edu'} soewob@mailbox.sc.edu
-    %p
-      Stay connected with us on:
-      %ul{:style => 'list-style-type:none;'}
-        %li
-          %img{:src => 'images/icon-facebook.png', :width => '30px'} 
-          %b Facebook 
-          %a{:href => 'https://www.facebook.com/ewbatusc'} Page
-          %b &
-          %a{:href => 'https://www.facebook.com/groups/38632526173/'} Group
-        %li
-          %a{:href => 'https://twitter.com/ewbusa_usc'} 
-            %img{:src => 'images/icon-twitter.png', :width => '30px'} 
-            Twitter
-        %li
-          %a{:href => 'https://www.youtube.com/user/uscewb'}
-            %img{:src => 'images/icon-youtube.png', :width => '30px'} 
-            Youtube
-        %li
-          %a{:href => 'https://www.flickr.com/photos/127751746@N04/'}
-            %img{:src => 'images/icon-flickr.png', :width => '30px'} 
-            Flickr
-  .col-xs-12.col-md-8
-    %h3 Chapter Officers
-    %ul{:style => 'list-style-type:none;'}
-      %li 
-        %b President
-        | Elizabeth Crummy
-      %li 
-        %b Vice-President & Project Lead
-        | Corey King
-      %li 
-        %b Treasurer 
-        | Grace Porter
-      %li 
-        %b Secretary 
-        | Caroline Haggard
-      %li 
-        %b Local Projects Committee Chair 
-        | Zane McGhee
-      %li 
-        %b Corporate Outreach Committee Co-Chairs 
-        | Alex Galan & Tatiana Dib
-      %li 
-        %b Fundraising Committee Chair 
-        | Andrea Eggleston
-      %li 
-        %b Public Health Committee Chair 
-        | Olivia Haley
-      %li 
-        %b Spanish Committee Chair 
-        | Eric Reyes
+  .col-xs-6
+    %form{:action => "", :method => "post"}
+      .formgroup
+        %label Name
+        %input.form-control{:type => "text", :name => "name"}
+        %label Body
+        %textarea.form-control{:name => "body"}
+        %br
+        %button.btn.btn-primary{:type => 'submit'} Send
+%br
