--- a/app/views/layout.haml
+++ b/app/views/layout.haml
@@ -12,10 +12,7 @@
     .container
       .row
         .col-xs-12.logo
-          .row
-            .col-xs-12.col-md-6.col-md-offset-3
-              %a{:href => '/'}
-                %img.logo{:src => 'images/uscewb.png'}
+          = haml(:_header)
         .col-xs-12.nav-bg
           = haml(:_navbar)
         .col-xs-12.bg-white
