--- a/app/views/_navbar.haml
+++ b/app/views/_navbar.haml
@@ -21,17 +21,17 @@
     #nav-collapse.collapse.navbar-collapse
       = render_navigation
       / Social for larger screens
-      %ul.nav.navbar-nav.navbar-right.hidden-xs
+      %ul.nav.navbar-nav.navbar-right.hidden-sm
         %li.icon-facebook
           %a{:href => 'https://www.facebook.com/ewbatusc', :target => '_blank'}
-            %img{:src => 'images/icon-facebook.png', :width => '20px'}
+            %img{:src => 'images/icon-facebook.png', :height => '18px'}
         %li.icon-twitter
           %a{:href => 'https://twitter.com/ewbusa_usc', :target => '_blank'}
-            %img{:src => 'images/icon-twitter.png', :width => '20px'}
+            %img{:src => 'images/icon-twitter.png', :height => '18px'}
         %li.icon-youtube
           %a{:href => 'https://www.youtube.com/user/uscewb', :target => '_blank'}
-            %img{:src => 'images/icon-youtube.png', :width => '20px'}
+            %img{:src => 'images/icon-youtube.png', :height => '18px'}
         %li.icon-linkedin
           %a{:href => 'https://www.linkedin.com/groups/Engineers-Without-Borders-University-South-8228144', :target => '_blank'}
-            %img{:src => 'images/icon-linkedin.png', :width => '20px'}
+            %img{:src => 'images/icon-linkedin.png', :height => '18px'}
             
