--- a/app/views/contact.haml
+++ b/app/views/contact.haml
@@ -5,6 +5,10 @@
       .formgroup
         %label Name
         %input.form-control{:type => "text", :name => "name"}
+        %br
+        %label Email
+        %input.form-control{:type => "text", :name => "email"}
+        %br
         %label Body
         %textarea.form-control{:name => "body"}
         %br
