--- a/app/views/layout.haml
+++ b/app/views/layout.haml
@@ -16,6 +16,7 @@
         .col-xs-12.nav-bg
           = haml(:_navbar)
         .col-xs-12.bg-white
+          = styled_flash
           = yield
         .col-xs-12.footer-bg
           = haml(:_footer)
