minor layout changes

--- a/app/views/_navbar.haml
+++ b/app/views/_navbar.haml
@@ -21,7 +21,7 @@
     #nav-collapse.collapse.navbar-collapse
       = render_navigation
       / Social for larger screens
-      %ul.nav.navbar-nav.navbar-right.hidden-xs
+      %ul.nav.navbar-nav.navbar-right.hidden-sm
         %li.icon-facebook
           %a{:href => 'https://www.facebook.com/ewbatusc', :target => '_blank'}
             %img{:src => 'images/icon-facebook.png', :height => '18px'}
