--- a/app/views/support.haml
+++ b/app/views/support.haml
@@ -12,7 +12,7 @@
       = succeed "," do
         %a{:href => 'https://ssl.charityweb.net/ewbusa/?Custom3=100216'} general chapter activities
       or designated for a specific international project.
-    %p EWB-USA is a non-profit company, and your donation is therefore tax deductible.
+      EWB-USA is a non-profit company, and your donation is therefore tax deductible.
     
 .page-header
   %h2.text-center Our Top Contributors
@@ -32,7 +32,7 @@
 
 / Row Two, 2 across
 .row
-  .col-xs-6.col-md-5.col-md-offset-1
+  .col-xs-6.col-md-4.col-md-offset-2
     %a.thumbnail{:href => "http://why.knovel.com/"}
       .row
         .col-xs-12.col-md-4
@@ -43,7 +43,7 @@
             Knovel is a web-based application integrating technical 
             information with analytical and search tools to drive 
             innovation and deliver answers engineers can trust.
-  .col-xs-6.col-md-5
+  .col-xs-6.col-md-4
     %a.thumbnail{:href => "http://www.boeing.com/boeing/"}
       .row
         .col-xs-12.col-md-4
@@ -79,7 +79,7 @@
         Society of American Military Engineers
         
 .row
-  .col-xs-12.col-md-10.col-md-offset-1
+  .col-xs-12.col-md-8.col-md-offset-2
     %h3 Our Partners and Sponsors
     %p EWB-USA at USC thanks our sponsors for their support of the La Victoria Irrigation project.
     %ul.sponsors
