--- a/app/views/_footer.haml
+++ b/app/views/_footer.haml
@@ -2,4 +2,13 @@
   .col-xs-12
     %p.text-center
       %b &copy; 2015 University of South Carolina EWB-USA Student Chapter
-      
+      %br
+      %a{:href => 'https://www.facebook.com/ewbatusc', :target => '_blank'} Facebook
+      |
+      %a{:href => 'https://twitter.com/ewbusa_usc', :target => '_blank'} Twitter
+      |
+      %a{:href => 'https://www.youtube.com/user/uscewb', :target => '_blank'} YouTube
+      |
+      %a{:href => 'https://www.linkedin.com/groups/Engineers-Without-Borders-University-South-8228144', :target => '_blank'} LinkedIn
+      |
+      %a{:href => :contact} Contact
