--- a/app/views/contact.haml
+++ b/app/views/contact.haml
@@ -1,6 +1,6 @@
 %br
 .row
-  .col-xs-12.col-md-6
+  .col-xs-12.col-md-8.col-md-push-2
     %form{:action => "", :method => "post"}
       .formgroup
         %label Name
