removed border-radius to navbar

--- a/app/public/css/layout.css
+++ b/app/public/css/layout.css
@@ -77,7 +77,8 @@ img.logo {
 }
 
 #nav.affix {
-  background-color: rgba(0, 0, 0, 1);
+  background-color: rgba(20, 20, 20, 0.9);
+  border-radius: 0;
   position: fixed;
     top: 0;
     left: 0;
